--- a/Client/Ticket.Web/Views/Events/Index.cshtml
+++ b/Client/Ticket.Web/Views/Events/Index.cshtml
@@ -34,7 +34,7 @@
 				<div class="main-card mt-4">
 					<div class="card-top p-4">
 						<div class="card-event-img">
-							<img src="@item.Picture" >
+							<img src="@item.StockPictureUrl" >
 						</div>
 						<div class="card-event-dt">
 							<h5>@item.Title</h5>
