EventCreateInputValidator Fluent Validation added

--- a/Client/Ticket.Web/Views/_ViewImports.cshtml
+++ b/Client/Ticket.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Ticket.Web
 @using Ticket.Web.Models
 @using Ticket.Web.Models.Catalog;
+@using Ticket.Web.Models.Basket;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
