--- a/Client/Ticket.Web/Views/Home/Detail.cshtml
+++ b/Client/Ticket.Web/Views/Home/Detail.cshtml
@@ -144,11 +144,12 @@
 								</div>
 							</div>
 							<div class="booking-btn">
-								<a href="checkout.html" class="main-btn btn-hover w-100">Book Now</a>
+								<a asp-controller="Basket" asp-action="AddBasketItem" asp-route-courseId="@Model.Id" class="main-btn btn-hover w-100">Book Now</a>
 							</div>
 						</div>
 					</div>
-					<div class="col-xl-12 col-lg-12 col-md-12">
+
+				@*	<div class="col-xl-12 col-lg-12 col-md-12">
 						<div class="more-events">
 							<div class="main-title position-relative">
 								<h3>More Events</h3>
@@ -319,7 +320,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div>*@
 				</div>
 			</div>
 		</div>
