Basket is working

--- a/Client/Ticket.Web/Views/Basket/Index.cshtml
+++ b/Client/Ticket.Web/Views/Basket/Index.cshtml
@@ -52,7 +52,7 @@
 						</div>
 						<div class="confirmation-btn">
 							<button class="main-btn btn-hover h_50 w-100 mt-5" type="button">Confirm</button>
-							<a class="btn btn-danger" asp-controller="Basket" asp-action="RemoveBasketItem" asp-route-courseId="@item.EventId">sil</a>
+							<a class="btn btn-danger" asp-controller="Basket" asp-action="RemoveBasketItem" asp-route-eventId="@item.EventId">sil</a>
 						</div>
 					</div>
 				}
