--- a/Client/Ticket.Web/Views/Home/Detail.cshtml
+++ b/Client/Ticket.Web/Views/Home/Detail.cshtml
@@ -144,7 +144,7 @@
 								</div>
 							</div>
 							<div class="booking-btn">
-								<a asp-controller="Basket" asp-action="AddBasketItem" asp-route-courseId="@Model.Id" class="main-btn btn-hover w-100">Book Now</a>
+								<a asp-controller="Basket" asp-action="AddBasketItem" asp-route-eventId="@Model.Id" class="main-btn btn-hover w-100">Book Now</a>
 							</div>
 						</div>
 					</div>
