--- a/Client/Ticket.Web/Views/Home/Index.cshtml
+++ b/Client/Ticket.Web/Views/Home/Index.cshtml
@@ -89,7 +89,7 @@
 													<div class="event-footer">
 														<div class="event-timing">
 															<div class="publish-date">
-																<span><i class="fa-solid fa-calendar-day me-2"></i>@item.CreatedTime</span>
+																<span><i class="fa-solid fa-calendar-day me-2"></i>@item.EventDateTime</span>
 																<span class="dot"><i class="fa-solid fa-circle"></i></span>
 																@*<span>Fri, 3.45 PM</span>*@
 															</div>
