--- a/Client/Ticket.Web/Views/Auth/SignUp.cshtml
+++ b/Client/Ticket.Web/Views/Auth/SignUp.cshtml
@@ -1,47 +1,110 @@
 ﻿
-@{
+*@{
     ViewData["Title"] = "SignUp";
 }
-@model SignUpInput
+@model Ticket.Web.Models.SignUpInput
 
 <!DOCTYPE html>
-<html>
+<html lang="en" class="h-100">
+
+<!-- Mirrored from www.gambolthemes.net/html-items/barren-html/disable-demo-link/sign_up.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 12 Jul 2023 19:01:57 GMT -->
 <head>
-    <title>Sign Up</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, shrink-to-fit=9">
+	<meta name="description" content="Gambolthemes">
+	<meta name="author" content="Gambolthemes">
+	<title>Barren - Simple Online Event Ticketing System</title>
+
+	<!-- Favicon Icon -->
+	<link rel="icon" type="image/png" href="images/fav.png">
+
+
 </head>
+
 <body>
+	<div class="form-wrapper">
+		<div class="app-form">
+			<div class="app-form-sidebar">
+				<div class="sidebar-sign-logo">
+					<img src="images/sign-logo.svg" alt="">
+				</div>
+				<div class="sign_sidebar_text">
+					<h1>The Easiest Way to Create Events and Sell More Tickets Online</h1>
+				</div>
+			</div>
+			<div class="app-form-content">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-lg-10 col-md-10">
+							<div class="app-top-items">
+								<a href="index.html">
+									<div class="sign-logo" id="logo">
+										<img src="~/images/logo.svg" alt="">
+										<img class="logo-inverse" src="images/dark-logo.svg" alt="">
+									</div>
+								</a>
+								<div class="app-top-right-link">
+									Already have an account?<a class="sidebar-register-link" asp-action="SignIn" >Sign In</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-5 col-lg-6 col-md-7">
+							<div class="registration">
+								<form asp-controller="Auth" asp-action="SignUp" method="post">
+									<h2 class="registration-title">Sign up to Barren</h2>
+									<div class="row mt-3">
+										<div class="col-lg-12 col-md-12">
+											<div class="form-group mt-4">
+												<label asp-for="Email" class="form-label">Your Email*</label>
+												<input asp-for="Email" class="form-control h_50" type="email" placeholder="" value="">
+											</div>
+										</div>
+										<div class="col-lg-12 col-md-12">
+											<div class="form-group mt-4">
+												<label asp-for="UserName" class="form-label">Your Username*</label>
+												<input asp-for="UserName" class="form-control h_50" type="text" placeholder="" value="">
+											</div>
+										</div>
+										<div class="col-lg-12 col-md-12">
+											<div class="form-group mt-4">
+												<div class="field-password">
+													<label asp-for="Password" class="form-label">Password*</label>
+												</div>
+												<div class="loc-group position-relative">
+													<input class="form-control h_50" asp-for="Password" type="password" placeholder="">
+													<span class="pass-show-eye"><i class="fas fa-eye-slash"></i></span>
+												</div>
+												<div class="loc-group position-relative">
+													<label asp-for="City" class="form-label">City</label>
+													<input class="form-control h_50" asp-for="City" placeholder="">
+												</div>
+											</div>
+										</div>
+										<div class="col-lg-12 col-md-12">
+											<button class="main-btn btn-hover w-100 mt-4" type="submit">Sign Up</button>
+										</div>
+										
+									</div>
+								</form>
+								<div class="new-sign-link">
+									Already have an account?<a class="signup-link" asp-controller="Auth" asp-action="SignIn">Sign In</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="copyright-footer">
+					© 2022, Barren. All rights reserved. Powered by Gambolthemes
+				</div>
+			</div>
+		</div>
+	</div>
 
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <h2 class="mb-3">Sign Up</h2>
-                <form asp-controller="Auth" asp-action="SignUp" method="post">
-                    <div class="mb-3">
-                        <label asp-for="UserName" class="form-label">Username</label>
-                        <input asp-for="UserName" type="text" class="form-control" id="userName" >
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="Email" class="form-label">Email</label>
-                        <input asp-for="Email" type="email" class="form-control" id="email">
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="City" class="form-label">City</label>
-                        <input asp-for="City" type="text" class="form-control" id="city">
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="Password"  class="form-label">Password</label>
-                        <input asp-for="Password" type="password" class="form-control" id="password" >
-                    </div>
-                  
-                    <button type="submit" class="btn btn-primary">Sign Up</button>
-                </form>
-            </div>
-        </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
+<!-- Mirrored from www.gambolthemes.net/html-items/barren-html/disable-demo-link/sign_up.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 12 Jul 2023 19:01:57 GMT -->
 </html>
 
 
