--- a/Client/Ticket.Web/Views/Events/Create.cshtml
+++ b/Client/Ticket.Web/Views/Events/Create.cshtml
@@ -91,6 +91,7 @@
 																	<label asp-for="EventDateTime" class="form-label mt-3 fs-6">Event Date and Time.*</label>
 																	<div class="loc-group position-relative">
 																		<input asp-for="EventDateTime" class="form-control h_50" type="datetime-local">
+																		<span asp-validation-for="EventDateTime" class="text-danger"></span>
 																		<span asp-for="EventDateTime" class="absolute-icon"><i class="fa-solid fa-calendar-days"></i></span>
 																	</div>
 																</div>
