--- a/Client/Ticket.Web/Views/Order/OrderHistory.cshtml
+++ b/Client/Ticket.Web/Views/Order/OrderHistory.cshtml
@@ -26,7 +26,7 @@
                             <tr>
 
                                 <td>@item.Id</td>
-                                <td>@item.CreatedDate</td>
+                                <td>@item.CreatedDate.GetValueOrDefault().ToString("yyyy-MM-dd")</td>
                                 <td>
                                     <table class="table">
 
