--- a/Client/Ticket.Web/Views/Events/Index.cshtml
+++ b/Client/Ticket.Web/Views/Events/Index.cshtml
@@ -59,7 +59,7 @@
 							</div>
 							<div class="card-dt-text">
 								<h6>Event Date</h6>
-								<span>@item.EventDateTime.ToString("yyyy-MM-dd HH:mm")</span>
+								<span>@item.EventDateTime.ToShortDateString()</span>
 							</div>
 						</div>
 						<div class="card-bottom-item">
