--- a/Client/Ticket.Web/Views/Events/Update.cshtml
+++ b/Client/Ticket.Web/Views/Events/Update.cshtml
@@ -88,14 +88,14 @@
 																	<option value="Academic National Drama Theatre">Academic National Drama Theatre</option>
 																	<option value="The State Museum of Musical Culture of Azerbaijan">The State Museum of Musical Culture of Azerbaijan</option>
 																</select>
-
-																<div class="col-md-6">
+																<input asp-for="EventDateTime" value="2022-09-12T19:30" />
+														@*		<div class="col-md-6">
 																	<label class="form-label mt-3 fs-6">Event Date and Time.*</label>
 																	<div class="loc-group position-relative">
-																		<input asp-for="EventDateTime" class="form-control h_50" type="datetime-local">
+																		<input asp-for="EventDateTime" /> class="form-control h_50" type="datetime-local"
 																		<span class="absolute-icon"><i class="fa-solid fa-calendar-days"></i></span>
 																	</div>
-																</div>
+																</div> *@
 																@*<div class="form-group border_bottom pt_30 pb_30">
 																<label class="form-label fs-16">When is your event?*</label>
 																<p class="mt-2 fs-14 d-block mb-3">Tell your attendees when your event starts so they can get ready to attend.</p>
