--- a/Client/Ticket.Web/Views/Order/SuccessfulCheckout.cshtml
+++ b/Client/Ticket.Web/Views/Order/SuccessfulCheckout.cshtml
@@ -78,10 +78,9 @@
 											<div class="QR-dt p-4">
 												<ul class="QR-counter-type">
 													<li>Counter</li>
-													<li>gghff</li>
 												</ul>
 												<div class="QR-scanner">
-													<img src="images/qr.png" alt="QR-Ticket-Scanner">
+													<img src="~/images/qr.png" alt="QR-Ticket-Scanner">
 												</div>
 											</div>
 								</div>
