--- a/Client/Ticket.Web/Views/Order/Checkout.cshtml
+++ b/Client/Ticket.Web/Views/Order/Checkout.cshtml
@@ -7,7 +7,7 @@
 
 
 <form asp-controller="Order" asp-action="Checkout" method="post">
-	<div class="row" style="margin-top: 5% !important">
+	<div class="row" style="margin-top: 15% !important">
 	<div class="col-xl-8 col-lg-12 col-md-8">
 		<div class="checkout-block col-md-8">
 			<div class="main-card">
@@ -22,12 +22,12 @@
 								<input asp-for="Country" class="form-control h_50" type="text" placeholder="" value="Azerbaijan">
 							</div>
 						</div>
-						<div class="col-lg-6 col-md-12">
+						@*<div class="col-lg-6 col-md-12">
 							<div class="form-group mt-4">
 								<label asp-for="State" class="form-label"></label>
 								<input asp-for="State" class="form-control h_50" type="text" placeholder="" value="aa">
 							</div>
-						</div>
+						</div>*@
 						<div class="col-lg-6 col-md-12">
 							<div class="form-group mt-4">
 								<label asp-for="City" class="form-label"></label>
@@ -40,7 +40,7 @@
 								<input asp-for="ZipCode" class="form-control h_50" type="text" placeholder="" value="6765">
 							</div>
 						</div>
-							<div class="col-lg-12 col-md-12">
+						@*	<div class="col-lg-12 col-md-12">
 								<div class="form-group mt-4">
 									<label asp-for="CardName" class="form-label"></label>
 									<input asp-for="CardName" class="form-control h_50" type="text" placeholder="" value="master">
@@ -63,7 +63,7 @@
 									<label asp-for="CVV" class="form-label">CVV*</label>
 									<input asp-for="CVV" class="form-control h_50" type="text" placeholder="" value="666">
 								</div>
-							</div>
+							</div>*@
 					</div>
 				</div>
 			</div>
