Mail sender service added

--- a/Client/Ticket.Web/Views/Auth/SignIn.cshtml
+++ b/Client/Ticket.Web/Views/Auth/SignIn.cshtml
@@ -55,7 +55,7 @@
 								<h2 class="registration-title">Sign in to Barren</h2>
 								<div class="form-group mt-5">
 									<label asp-for="Email" class="form-label"></label>
-									<input value="zulu22@gmail.com" asp-for="Email" class="form-control h_50" type="email" placeholder="Enter your email">
+									<input value="zuleyxasuleymanova@gmail.com" asp-for="Email" class="form-control h_50" type="email" placeholder="Enter your email">
 								    <span class="text-danger" asp-validation-for="Email"></span>
 										
 								</div>
