--- a/Client/Ticket.Web/Views/Basket/Index.cshtml
+++ b/Client/Ticket.Web/Views/Basket/Index.cshtml
@@ -43,7 +43,7 @@
 								
 								<td style="font-size: 14px; font-weight: 500;">
 									<div class="col">
-										<p class="lead fw-normal mb-2">@item.Quantity</p>
+										<p class="lead fw-normal mb-2" name="Quantity" value="1">@item.Quantity</p>
 									</div>
 								</td>
 								<td>
@@ -107,7 +107,9 @@
 				}
 				else
 				{
-					<div class="alert alert-info">Basket is empty</div>
+					<div>
+						<h1>Basket is empty</h1>
+</div>
 				}
 			</div>
 		</div>
