--- a/Client/Ticket.Web/Views/Home/Index.cshtml
+++ b/Client/Ticket.Web/Views/Home/Index.cshtml
@@ -82,8 +82,7 @@
 														<a class="event-title">@item.Title</a>
 														<p>@item.Category.Name</p>
 														<div class="duration-price-remaining">
-															<span class="duration-price">@item.Price</span>
-															<span class="remaining"></span>
+															<span class="duration-price">@item.Price azn</span>
 														</div>
 													</div>
 													<div class="event-footer">
@@ -93,7 +92,6 @@
 																<span class="dot"><i class="fa-solid fa-circle"></i></span>
 																@*<span>Fri, 3.45 PM</span>*@
 															</div>
-															<span class="publish-time"><i class="fa-solid fa-clock me-2"></i></span>
 														</div>
 													</div>
 												</div>
