--- a/Client/Ticket.Web/Views/Shared/_Layout.cshtml
+++ b/Client/Ticket.Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 							<i class="fa-solid fa-bars"></i>
 						</span>
 					</button>
-					<a class="navbar-brand order-1 order-lg-0 ml-lg-0 ml-2 me-auto" asp-asp-controller="Home" asp-action="Index">
+					<a class="navbar-brand order-1 order-lg-0 ml-lg-0 ml-2 me-auto" asp-controller="Home" asp-action="Index">
 								<div asp-controller="Home" asp-action="Index" class="res-main-logo">
 							<img  src="~/images/logo-icon.svg" alt="">
 						</div>
@@ -56,18 +56,6 @@
 							<ul class="navbar-nav justify-content-end flex-grow-1 pe_5">
 								<li class="nav-item">
 									<a asp-controller="Home" asp-action="Index" class="nav-link active" aria-current="page">Home</a>
-								</li>
-								
-							
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-										Help
-									</a>
-									<ul class="dropdown-menu dropdown-submenu">
-										<li><a class="dropdown-item" href="faq.html">FAQ</a></li>
-										<li><a class="dropdown-item" href="help_center.html">Help Center</a></li>
-										<li><a class="dropdown-item" href="contact_us.html">Contact Us</a></li>
-									</ul>
 								</li>
 								
 							</ul>
