--- a/Client/Ticket.Web/Views/Order/SuccessfulCheckout.cshtml
+++ b/Client/Ticket.Web/Views/Order/SuccessfulCheckout.cshtml
@@ -29,9 +29,6 @@
 							<div class="invoice-header-logo">
 								<img src="~/images/dark-logo.svg" alt="invoice-logo">
 							</div>
-							<div class="invoice-header-text">
-								<a  class="download-link">Download</a>
-							</div>
 						</div>
 						<div class="invoice-body">
 							<div class="main-table bt_40">
@@ -62,7 +59,6 @@
 												<td colspan="5">
 													<div class="user_dt_trans text-end pe-xl-4">
 														<div class="totalinv2">Invoice Total : @ViewBag.order.TotalPrice</div>
-														<p>Paid via Paypal</p>
 													</div>
 												</td>
 											</tr>
@@ -79,7 +75,7 @@
 												<ul class="QR-counter-type">
 													<li>Counter</li>
 												</ul>
-												<div class="QR-scanner">
+									<div class="QR-scanner" style="align-items: center; text-align: center;">
 													<img src="~/images/qr.png" alt="QR-Ticket-Scanner">
 												</div>
 											</div>
